--- a/09-03-24.md
+++ b/09-03-24.md
@@ -1,3 +1,128 @@
-# Lecture Notes for 09-03-24
+### HIST 303 - Japan's Modern Revolution - Fall 2024
 
--
+[//]: <> (use `gqap` to force wrap text)
+
+# Lecture 2 - September 3, 2024 - The Tokugawa Order
+
+## Lecture Outline
+
+### 1. Historiography: "Before the Dawn"?
+
+- "Before the Dawn" (1929), written by Shimazaki Toson (1872 - 1943)
+  - Trances experiences of people who lived before the Meiji restoration
+  - novel captures the notion that a new era is coming (in 1868)
+  - those who lived before this "new dawn" were part of a benighted age and were searching for a
+    better future
+  - Meiji directly translated to "light governance" or "enlightened rule"
+  - implied Tokugawa period (pre-1868) was a backward time
+- Benighted Tokugawa period v. Enlightened Meiji?
+- People who are citical to the new regime focus on the continual of bad things
+  from the Tokugawa period into the Meiji restoration (both parties agree that the Tokugawa period
+  was bad)
+- After the second world war, there was a huge Japanese self reflection on how/why a fascist
+  government was able to take control
+  - Point to the feudal remnants, from the old Tokugawa period, that lead to the authoritarianism - Only reinforces that idea that the old regime was a mainly negative thing, and the Meiji
+    period hadn't gone far enough
+- Stating in the late 1950s, a group of American scholars started to promote a different
+  interpretation of the Japanese past
+  - They actually highlighted Japan as a non-western country that Japan had succeeded in the face of
+    Western imperialism
+    - Scholars often looked back to Tokugawa period and highlighted many of the positive aspects,
+      like the high levels of math and literacy
+    - Valued the spirit of hard-work and frugality, sharing the "protestant work-ethic", which led
+      to a smooth transition to a modern capitalist world
+    - Within the context of the Cold War, the arguments often took an ideological dimension
+      - Assuming more than America/Western Europe was the only way to measure success in a
+        non-western nation
+      - Also becomes a powerful source of critique in Japan and eventually in the US
+      - American scholars did not highlight the negative aspects of Japanese culture (in Tokugawa), contrasting from
+        how Japanese scholars view those events
+- Things start to move in the other direction within Japan itself
+  - People start to value their past, looking to the Tokugawa period
+  - More emphasis is now placed on the complexity/nuance rather than just purely good/bad
+- In the Tokugawa period, people came to understand that it was an unprecedented era of peace
+
+### 2. An Era of Peace
+
+- "Warring States"
+
+  - Era of unprecedented war, where the political society broke down into a state of constant
+    civil war
+  - Towards the end of the century, more powerful war lords emerged and were able to form alliances
+
+- "Three Great Unifiers"
+
+  - Oda Nabunaga
+    - Received guns through the Portuguese and used them to dominate the battlefield
+    - Comes closer than any of his predecesors in uniting his country
+    - Famous for being ruthless (in pursuit of his enemies, including Buddhist temples, and his
+      ambition) - Contributes to his success, but also backfires when his Lt.
+  - One of his Lt., Toyotomi Hideyoshi, took over after Oda is killed
+
+    - In order to create a new political order, he federates conquest
+    - Rather than continuing on a campaign of total conquest, he builts an alliance with the
+      carrot-stick model
+    - Good for the daimyos, as there was little trust among daimyos and their own Lts.
+    - Contributes to momentum towards peace
+    - Having risen up from very humble origins, he also understands that in order to have an era
+      of peace, you cannot have an armed population, and creates a campaign to collect
+      swords/disarm the population
+    - In conjunction, also implements a policy of seperating peasants and warriors by setting up
+      military camps, to prevent the exploitation of unarmed peasants
+    - Leads to wave of urbanization, with the camps turning in cities (castle towns)
+    - Launches national Cadastral surveys, laying the foundation for an enduring system of taxation
+      for the rest of the Tokugawa period
+      - Makes the decision to not collect taxes in money, even through money is circulating and
+        there is a cash economy. Chooses to collect taxes in rice
+    - But is a megalomaniac, launching an attack into China by starting an invasion into Korea
+      - Was brutal (mound of ears in Japan) and not remembered fondly in the rest of Asia
+      - People of Korea fought back, and were eventually successful in their defense
+    - At home, he also has issues: cannot produce a male heir
+      - Finally produces a male heir, but the child is still very young when Hideyoshi dies
+      - So, he appoints a council of lords/trusted allies
+
+  - Tokugawa Ieyasu was the most powerful lords in that council
+    - Turns out to also have a lot of ambition
+      - Leads to the last great battle of the warring states: In 1600, Battle of Sekigahara.
+      - Establishes Tokugawa as the dominant leader of the period
+    - emperor did not have a standing army and was mainly seen as a spiritual leader, but has this
+      historical clout
+    - Tokugawa has himself declared as Shogun, creating a shogunate/bakafu, but keeps the emperor in "power" to have more
+      legitimacy (eventually topples Tokugawa regime in the Meiji restoration)
+    - Very quickly makes his son Shogun to avoid issue of succession and works as a "retired" shogun
+    - Rules with a carrot-stick model
+    - Creates a classification system of Daimyos, laying out code and controling their behavior
+      - At the core, creates a system of Alternate Attendance (_Sankin kotai_), forcing the
+        daimyos to spend some time living in his new established capital, Edo (now Tokyo)
+      - Constantly keeps the Daimyos in a state of financial stress, discouraging them from
+        launching rebellions
+
+### 3. Consequences of "the Great Peace"
+
+- Tokugawa Ieyasu creates a highway system: with a mountain route (Nakasendo) and a coastal route (Tokaido)
+- The largest city in the world: Edo
+  - stimulates national (rice) market
+  - leads to futures trading, etc
+- Re-birth of the ancient capital: Kyoto (around 400,000 people by 1700)
+- A national rice market: Osaka (around 500,000 people by 1700)
+- Warriors and merchants
+
+## Key Terms
+
+- Shimazaki Toson, _Before the Dawn_ (novel from the Meiji period)
+- Tokugawa v. Meiji (= "Bright governance", "Enlighteded Rule")
+- Historiography
+- Warring States (= _Sengoku_) period
+- Daimyo
+- Three Unifiers= ODA Nobubaga (1534-82) / Toyotomi Hideyoshi (1536-98) / Tokugawa Ieyasu
+  (1542-1616)
+- Imjin War (1592-98)
+- Battle of Sekigahara - 1600
+- _Sei-i-tai-shogun_ (abbreviated to just "Shogun")
+- Tenno (= emperor)
+- Alternate Attendance (_sankin kotai_)
+- Nakasendo and Tokaido highways
+- Three great cities:
+  - Edo (the Shogun capital - present day Tokyo)
+  - Kyoto (ancient capital, administrative center for Western Japan)
+  - Osaka (the merchant capital)
