--- a/09-03-24.md
+++ b/09-03-24.md
@@ -106,6 +106,9 @@
 - Re-birth of the ancient capital: Kyoto (around 400,000 people by 1700)
 - A national rice market: Osaka (around 500,000 people by 1700)
 - Warriors and merchants
+  - Age of the warrior is increasingly the age of the merchant
+  - purchasing power of samurai salaries becomes less and less meaningful
+  - Merchants were taxed in
 
 ## Key Terms
 
