--- a/09-05-24.md
+++ b/09-05-24.md
@@ -4,8 +4,128 @@
 
 # Lecture 3 - September 5, 2024
 
-##
+## Lecture Outline - A "Closed Country"? Tokugawa Japan and the World
 
-###
+### 1. The Suppression of Christianity and the Control of Immigration
 
--
+- Portuguese established key base in Macua in 1517, and landed in Japan in 1542
+- Arrival of foreigners was initially portrayed beautifully
+- Remember, Oda Nabunaga went after the traditional regligious ministries in Japan, but perhaps b/c
+  the benefit of the trade, he is quite tolerant of the Christian missionaries
+- Hideyoshi was also quite tolerant, but eventually becomes shocked at how successful the Jesuits
+  are at winning converts and also that the Portuguese brought enslaved people with them
+  - They also take some Japanese as slaves
+  - Really bothers Hideyoshi
+- Issues soft ban on Christianity (Catholicism) in 1587
+  - increasing trend on the persecution of Christians
+  - flamed by the arrival of English and the Dutch (Protestants, not Catholic)
+- In 1592, 55 Catholics are matyred in Japan
+- Point of no return: Shimabara Rebellion - 1637
+  - Massive peasant uprising by people responsible for growing food
+  - Takes place in southern Kyushu, famous for the Catholics to have converted Japanese
+  - Peasants resist the power of the Tokugawa state + its allies. Their fanatacism is not a good
+    thing, from the point of the Tokugawa.
+  - Leads the Bakafu to come to beleive that their needs to be a 0-tolerance policy for any
+    religious ideas that threaten their own authority by appealing to a higher-authority
+  - Leads to ban in 1639 of all Christianity + contact with Christian missionaries
+- When a Portuguese ship arrives in 1640, Tokugawa put every single Portuguese sailors to death and
+  sent the Chinese back to Macua to tell their story
+- Makes strong waves in the West, viewing the Japanese as a backwards culture
+- Lead to ban (with threat of death) on Japanese traveling abroad, closing off the country from the
+  rest of the world
+
+### 2. An "insular" Tokugawa period?
+
+- rise of Tokugawa lead to the rise of a powerful central authority, with control of foreign
+  relations
+- ability to control waters/establish strict control is key to their legitimacy of ruling
+- Ban of religion can be greater attributed to execution of a strong government, rather than xenophobia, etc
+
+### 3. Relations with the World?
+
+- Dutch were able to stay and continue trading in Japan, even after the ban of the Portuguese
+  - English withdraw b/c its not profitable
+  - Establish medium-sized port in Nagasaki (southern port city in Japan)
+  - Dutch often complained they lived like prisoners, but there is evidence they lived moderately
+    well
+- Tokugawa were very concerned with their immediate neighbords, rather than the Europeans from far
+- Korean ambassador paid respects to shogun in Kyoto
+  - unrelated, but there is evidence that many of the slaves taken from Japan were actually Korean
+- Foreign interactions to Korea had Japanese-go-betweens, with the Lords of Satsuma and Tsushima
+- Embassies were big spectacles, which helps solidify the legitimacy of the Tokugawa
+- read about the Ryukyus
+- Many Japanes trained in the basic Chinese tenants
+- Significant trade between China and Japan (most happened in Nagasaki)
+  - significant smuggling as well
+- Japan did not want to be a Chinese tributary state, especially so after the Ming dynasty was
+  toppled. Did not want to have relations with their successor, the Qing dynasty - Leads to disintegration of formal ties - Helps strengthen their view of belonging to a seperate cultural sphere
+
+### 4. Intellectual Developments in the Eighteenth Century
+
+- "National Studies", Nativism (_Kokugaku_)
+  - main impulse behind was to recover the original roots of native Japanese culture from before
+    the arrival of continental influences
+- "Dutch Studies" (_Rangaku_)
+  - Developed from the middle of the 18th century
+  - Effectively, a window into the intellectual world of the West
+  - Began when the ban of Chinese books about the west is lifted
+    - Due to a need for a new calendar system in Japan
+  - Lead to steady growth in math, medicine, etc
+    - In 1770s, group of scholars (basically doctors) get ahold Dutch Medical texts, marking
+      beginning of the interest in Western intellectualism
+    - Leads to bitter disputes between the Chinese, Tokugawa, and Dutch-studies practitioners
+
+### 5. Making a "Closed Country"
+
+- The case of Baron Moritz Aladar von Benyowsky
+  - Russians sent him to Kamchatka, (to the north of Japan)
+  - Writes about his escapades in eastern asia and starts making up bigger and bigger stories
+  - BSes about a future planned Russian invasion of Japan to the Japanese in a desperate ploy to
+    get help in Kamchatka. - But this letter is send to Nagasaki, and this false claim sends a shockwave to the
+    Tokugawa authorities
+  - Even though Russia didn't plan it, a series of Russian incursions from trade leads to Japan to
+    rethink its national defense
+- New ideas about "national defense"
+  - Moving capital. developing a stronger Navy, and talk about setting up military posts in Ezochi
+    (north island of Japan)
+- Shizuki Tadao and Engelbert Kaempfer (german physician): The Origins of the Term "Sakoku"
+  - Shizuki is a Dutch translator and traded with the Dutch
+  - Kaempfer calls for the closing of the country ("Sakoku": closed country)
+- Early 1800s, military expansion and reached a equilibrium point with their allowed foreign involvement in
+  Japan
+- Trouble with the Russians - Golovnin Incident, 1811
+  - Kidnapping of Japanese trader, leading to the Japansese to kidnap Russian trader (Golovnin)
+  - Russians try to brush it off, but leaves tension
+- Trouble with the English - Phaeton Incident, 1808
+  - Captain of English warship, Phaeton, entered Nagasaki harbour flying the Dutch flag
+  - Kidnaps several of the Dutch traders
+  - Holds them ransom until the Tokugawa agree to supply the ship
+  - Breach of Nagasaki is considered a very serious issue.
+    - Governor of nagasaki is forced to kill himself
+- More English ships: 1822, 1824
+  - Men go onto the Japanese coast unauthorized
+- "Decree calling for the Expulsion of Foreign Ships" (_Ikokusen uchiharai rei_) 1825
+
+## Key Terms
+
+- "Closed Country" (_Sakoku_)
+- Shimabara Rebellion (1637-8)
+- Deshima Island, Nagasaki
+- Ryukyu Kingdom – Satsuma domain
+- Yi Dynasty Korea – Tsushima domain
+- China – Ming dynasty (1368–1644), Ching dynasty (1644–1912)
+- National Studies", Nativism (_Kokugaku_)
+- "Dutch Studies" (_Rangaku_)
+- _Kaitai Shinsho_ (1774)
+- Tokugawa Yoshimune (1684–1751) = 8th Tokugawa Shogun (r. 1716–45)
+- Baron Moritz Aladar von Benyowsky
+- Kamchatka
+- Kurile Islands
+- Shizuki Tadao (1760–1806) – First to use the term "Closed Country"
+- Engelbert Kaempfer (1651–1716) – _An Enquiry, whether it be conducive to the good of the Japanese
+  Empire to keep it shut up as it is now, and not to suffer its Inhabitants to have any commerce with
+  foreign nations, whether at home or abroad_
+- Golovnin Incident 1811
+- Phaeton Incident 1808
+- More English ships: 1822 and 1824
+- "Decree calling for the Expulsion of Foreign Ships" (_Ikokusen uchiharai rei_) 1825
