--- a/09-10-24.md
+++ b/09-10-24.md
@@ -4,8 +4,128 @@
 
 # Lecture 4 - September 10, 2024
 
-##
+## Lecture Outline - Reforms and Rebellions
 
-###
+### 1. The Side-Effects of Peace and the Kyōhō Reforms
 
--
+- The financial costs of peace
+- Peace and the growth of these financial cites that formed as a result in the 17th century led to
+  samurai poverty
+- Problem for samurai, daimyo, and the Bakufu
+- Lead to borrowing money from merchants
+- Beginning in 1720s, Bakufu (Tokugawa) announced that they could not pay their samurai
+- In an attempt to remedy, TOKUGAWA Yoshimune’s push to rebuild the tax base by launching a series
+  of reforms, called the Kyōhō Reforms
+- early stages: do whatever was necessary to restore Bakafu's finances
+- By forking over more money, Daimyo's recognized that they were able to get away with worse
+  'alternate attendance' (sankin-kōtai)
+- Under Yoshimune, they promoted more frugality among the samurai. Trying to restore the 'spartan'
+  warrior spirit (also a moral/behavior reform)
+- Tightens up its system of tax collection (remember it was paid in rice), lead to peasant resistance
+- But it worked pretty well, and in 1728, they were able to restore the alternate attendance
+  requirements
+- Later in the 1730s, Bakufu meets new opposition, greatly intensified by the famine of 1732, Kyoho
+  famine. Scholars thought that the famine was due to an ecological limit to the population
+- By the beginning of 1733, rice prices skyrocketed, created conditions where uprisings occured
+  throughout the country
+- Yoshimune start to explore other approaches to improve the economy
+- Starts to build closer relationoships with merchants and encourages the cultivation of more
+  diverse crops, like sugar cane and sweet potatoes
+- These reforms succeed in restoring the economy/bakufu finances back to health
+- Yoshimune also codifies all of the laws put in place by the Tokugawa Bakufu in the first half of
+  their reign
+- But, growing sense of inequality/corruption, reaching peak in 1760s and 1770s when the Bakufu
+  was dominated by TANUMA Okitsugu
+
+### 2. The Rise and Fall of TANUMA Okitsugu
+
+- Tanuma came from humble origins, rising to become very powerful
+- Gets a start as a low ranking page, but builds a friendship with the shogun and other powerful men (had sexual
+  relationships?)
+- Was able to completely dominate the Bakufu, taking Yoshimune's policies to a new extreme
+- described as a forerunner of modern Japan, based on his economic policies
+- But in 1780s, a series of disasterous croup failures hit eastern Japan, leading to a massive spike
+  on rice prices
+- Causes extreme social distress/hardship. ~100,000 people starved to death
+- Death of Tanuma's main patron, Tokugawa Ieharu, in 1786, was enough to shake his reigns on the
+  bakafu. many of the daimyo now move against him
+- In first half of 1787 when Tanuma still has power, there is a rapidly growing divide in the Bakufu
+  between the Tanuma-loyal faction and the daimyo faction
+  - Stalemate is broken by "ordinary people", when uprisings sweep through ~30 towns/cities
+  - Most serious was in Edo, for 5 days/nights, 1000s of people from the lower level of society
+    tearing rice stores to the ground. Known as the "smashings" (_uchi kowashi_)
+  - Main target of this anger was not Tanuma/authorities, but the merchants who were hoarding
+    rice
+  - Mark the beginning of Yonaoshi (Millenarian world-renewal) movements
+- Tanuma is called onto resign and is replaced by MATSUDAIRA Sadanobu, the leader of the daimyo
+  group
+
+### 3. MATSUDAIRA Sadanobu and the Kansei Reforms
+
+- People were drawn to him b/c of his reputation for skillful governance during the height of the
+  famine years, especially given that his domain was one of the hardest hit
+- Unlike Tanuma, Sadanobu had an impeccable samurai pedigree/lineage, being the grandson of the 8th
+  shogun, Yoshimune
+- Smashings were put down by a Bakufu militia.
+- Once in power, he immediately sets out to consolatidate his position as the advisor to the shogun,
+  Tokugawa Ienari
+- Over the 18th century, we see the shift of the real power of the bakufu shifting from the shogun
+  himself to the people around him/his advisors
+- Afterwards, tries to follow in Yoshimune's footsteps, launching a new series of reforms, called the
+  Kansei Reforms, curbing samurai expenditure, by drastic options such as canceling debts over 20
+  years old
+- Protecting the peasantry, by taking people who moved into cities/fell into poverty and resettling
+  them only land that they could farm, reducing the number of people reliant on urban markets for
+  sustenance
+- Implements various policies to protect Edo in rice markets, ultimately to prevent a similar
+  uprising that happened earlier and got him into power
+  - Forces rice merchants into a cooperative financial venture with the Bakafu, acting as a central bank and regulating rice prices
+- Sadanobu's reforms were successful, but was not able to maintain them, as he was forced to resign
+  in 1793 due to dispute between the Bakufu and the Emperor's court in Kyoto, known as "The Title
+  Incident".
+
+  - Starts when the Emperor Kōkaku, decides he want his father to be honored with the title of
+    "Retired Emperor"
+    - But emperor's father had never actually been emperor and this move would've broken all
+      precedencts established by the Bakufu
+    - For the first time since the founding of the Bakufu, the Emperor's court in Kyoto was able to
+      assert its authority over the Bakufu, and defy the Bakufu's authority
+    - Sadanobu issues an official decree, and finds ways to punish those who he thinks are behind
+      this
+    - But, the Emperor's court in Kyoto is able to get the support of the daimyo, and Sadanobu is
+      forced to resign (within 4 months of the incident)
+    - Serves as a rallying cry for those that thought the Bakufu was disrespectful to the Imperial
+      Court - Source of this sentiment was the Mito School (in the Mito domain) - One of the representative scholars of the school was AIZAWA Seishisai - Mito Domain was one of the "Three Houses" of the Tokugawa Family, being very closely
+      related to the main house - In pushing for the veneration of the imperial court, they were really trying to bolster
+      the legitimacy of the Tokugawa Bakufu ('critics' from within)
+
+- Last for 3 decades until 1930s, when the Bakufu is dominated by Tokugawa Ienari
+
+### 4. TOKUGAWA Ienari and the Status Quo
+
+- Ienari was the 11th shogun, and was only 14 when he took power, reigning for half a century
+- Had > 40 wives/concubines, and > 50 children
+- Allowed him to consolidate his power, by marrying into the most powerful families in Japan, and
+  adopting their children
+- Makes the shogun's harem, o-oku, a powerful political force
+- Bolster's the regime's stability, but hampers their ability to respond to problems, becoming
+  engulfed in a false sense of security
+  - Some were able to see the writing on the wall: AIZAWA Seishisai
+
+## Key Terms
+
+- TOKUGAWA Yoshimune (1684-1751) (eighth shogun; reigns from 1716-45)
+- Kyōhō Reforms (1716-45)
+- TANUMA Okitsugu (1719-88) (Dominates Bakufu from 1760s to the end of the 1780s)
+- “Smashings” (_uchi kowashi_)
+- _Yonaoshi_ (Millenarian world-renewal)
+- MASUDAIRA Sadanobu (1758-1829) (Daimyo of Shirakawa domain; Chief Councillor;
+- dominates the Bakufu in the early 1790s)
+- Kansei Reforms (1790s)
+- TOKUGAWA Ienari (1773-1841) (eleventh shogun; reigns from 1787-1837)
+- Emperor Kōkaku (1771-1840) (reigns as Emperor from 1780-1817)
+- “The Title Incident”
+- Mito domain – One of the “Three Houses” of the Tokugawa Family
+- The Mito School
+- AIZAWA Seishisai (1782-1863)
+- Ō-oku (The ‘Great Interior’ of Edo Castle)
