--- a/09-12-24.md
+++ b/09-12-24.md
@@ -4,8 +4,114 @@
 
 # Lecture 5 - September 12, 2024
 
-##
+## Lecture Outline - "Troubles at Home", The Crisis of the Tempo Period
 
-###
+### 1. From boom to bust...
 
--
+- TOKUGAWA Ienari (11th shogun, ruled frtom 1787 to 1837), who rule was marked by the Kasei period (1804-1830)
+  - Associated with the idea of maturating of society in the Archipelago
+- Edo period merchant hourses (like Mitsui) had a great impact on economy then and continue to do so
+  now
+  - Very conscious of thei Edo period roots
+- Urban Prosperity and commerce – Kidai Shōran (scroll, ca. 1804. depicts the bustling prosperity of the
+  commerce at the time)
+  - Focused on common people, not just the elite
+- Printing culture starting to take off, allowing the flow of knowledge
+  - Facilitated by institutions like Lending Libraries (kashi hon-ya)
+- The Tempō period (1830-1844) – a time of crisis
+  - Almost immediately signs of trouble for the samurai class
+  - Okagemairi – “Thanksgiving Pilgrimages” to the Ise Shrine
+    - Commoners start ditching their obligations to go on these pilgrimages
+    - Not new to 1830. something along these lines happened every 60 years
+      - But this pilgrimage was of an unprecedented scale (estimates around 5 million out of
+        30 million people participated)
+    - The Bakufu was concerned, as the scale suggests there may be an impending breakdown of
+      authority in the rural parts
+- In 1833-1836, there are unusually cold temperatures and crop failures
+  - Another outbreak of famine and facilitates a rising tide of unrest
+  - Think of a relay of the 1780s, but on a larger scale
+- The bakufu were able to keep rebellions down in Edo (due to MATSUDAIRA Sadanobu policies
+  prioritizing Edo's rice/food supply during a famine), but Osaka (in the West) was where many of the
+  rice tax stores were - Rice was being taken out of Osaka and sent to Edo - Infuriantig to the people of Osaka
+
+### 2. The Rebellion of ŌSHIO Heihachirō, 1837
+
+- Rebellion in Osaka – Circulation of a manifesto
+
+- Uprising being led by samurai official send shockwaves through the upper echelons of the warrior
+  class - Did not help that Oshio sought to harness populist/ordinary townfolk to rise up and join his
+  revolt
+- In this manifesto, "We must first punish the officials, who torment th epeople so cruelly, then we
+  must execute the haught and rise Osaka merchants. Then we must distribute the gold, silver and
+  copper stores in their cellars, and the bales of rice hidden in their storehouses." - Appealing to the inequality/suffering of the ordinary people
+- Rebellion was not terribly successful. They set fires/burned down 1/4 of Osaka, but when all was
+  set and done, the Bakufu forces were able to quash the revolt in half a day.
+
+- But rebellion was important, seeking to harness the townfolk to bring reforms
+
+  - General sense of disgust at official corruption and indifference
+  - His ideas linger and continue to have an impact, having a potent legacy for decades that
+    follow
+
+- Oshio:
+
+  - Student of WANG Yang-ming (Ming dynasty China)
+    - Critic of Orthodox Neo-Confucianism and stresses the importance of action
+    - Previously intepreted action as personal conduct, but Oshio radicalizes this to mean action in
+      the public realm
+  - Sees the Emperor as defender of justice and benevolence for common
+    people. Argued that was ultimately important was not loyalty to the shogun, but loyalty to
+    fighting for justice, and it was the emperor who represents the transcendent moral order
+    - uses this to justify his rebellion
+    - Reflects the growing importance of the emperor in the political domain
+
+### 3. Official responses to the Tempō Crisis
+
+- Crisis was not followed by any systemic reform program
+  - Tokugawa Ienari was still shogun, officially steps down in 1837 but remains the powerhouse in
+    the Bakufu until his death in 1841
+    - Since he is happy with the status quo, he seems no need to launch drastic reforms
+- However, there were some daimyo who were concerned about the crisis
+  - TOKUGAWA Nariaki (1800-1860) – Daimyo of Mito Domain
+    - One of the three branch families of the main Tokugawa house
+    - Concerned about the crisis, and the need for reform
+    - Advocated for a series of reforms, known as the Tempō Reforms
+    - These reforms were not implemented, but they were a sign of the growing concern
+- Domainal reforms – emergence of “domain nationalism”
+  - most do the standard ones of canceling debts, frugality, etc
+  - some domains focused on enhacing commerce and industry, setting up domain monopolies
+    - Satsuma Domain was one of the most successful in this regard
+  - all members of the domain working together for the common good/strength
+- In 1841, momentum for set of reforms for the Bakufu builds
+- MIZUNO Tadakuni (1794-1851), the daimyo of Hamamatsu domain, – a key figure in the Bakufu’s reforms
+  - Advocated for a series of reforms, known as the Tempō Reforms (1841)
+  - focused on moral reform, particularly in the cities
+    - tried to stamp out gambling, prostitution, circus performances, etc
+    - ordinary people resented this "crackdown" on urban culture
+    - In 1842/43, he launches a series of reforms to bolster the Bakufu's finances and power
+      - these angered many different groups in Tokugawa society, ultimately leading to his
+        opposition to derail his carrer/reform program
+    - In 1844, he is forced to resign (brief comeback in 1845) and the reforms are abandoned
+- Some domains in the southwest were not drastically affected by the Tempo famine, and were able to
+  come out much stronger than before
+  - Satsuma Domain was one of the most successful in this regard
+
+## Key Terms
+
+- OKUGAWA Ienari (1773-1841) (eleventh shogun; reigns from 1787-1837)
+- Ka-sei period (1804-1830) (=Bunka and Bunsei eras)
+  - TSURUYA Namboku IV (playwright)
+  - JIPPENSHA Ikku (writer)
+  - KOBAYASHI Issa (poet)
+  - KITAGAWA Utamaro (artist)
+- _Kidai Shōran_ (“Excellent View of our Prosperous Age”, Scroll, ca. 1804)
+- Mitsui Echigoya (famous merchant house; forerunner of the modern Mistui Corporation)
+- Tempō period (1830-1844)
+- _Okagemairi_ – mass “thanksgiving pilgrimages” to Ise Shrine (shrine to the Sun Goddess,
+- mythical progenitor of the Imperial line)
+- ŌSHIO Heihachirō (1793-1837)
+- WANG Yang-ming (1472-1528) (= Ō Yōmei in Japanese)
+- TOKUGAWA Nariaki (1800-1860) – Daimyo of Mito Domain
+- Tempō Reforms
+- MIZUNO Tadakuni (1794-1851)
+- Satsuma Domain
