--- a/09-17-24.md
+++ b/09-17-24.md
@@ -1,11 +1,98 @@
 ### HIST 303 - Japan's Modern Revolution - Fall 2024
 
 [//]: <> (use `gqap` to force wrap text)
+[//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 6 - September 17, 2024
+# Lecture 6 - September 17, 2024 - "Dangers from Abroad": The Red Coats (and Yalies) are Coming!
 
-##
+## Lecture Outline
 
-###
+### 1. Samuel Wells Wlliams and the Morrison Incident
 
--
+- First professor of anything east asia at any major American university
+- Taught Chinese at Yale
+- Thought of Aizawa Seishisai's worst nightmare
+  - recall the reading
+- Moved to China (Canton) in 1833 and joins group of protestant missionaries, spending next 40 years of life in China
+- In 1836, Americans tried to establish new relationship with Japan by returning shipwrecked Japanese sailors
+- Originally sent to Macua, but
+- In 1837, thers a plan to take a ship called the Morrison to Japan, paid for by a NY businessman named Charles King, to try to return the Japanese castaways
+- But Japan still has the foreign expulsion decree, so the ship is driven away the coast of Edo and
+  then Satsuma, forcing the men back to China living in permanent exile
+  - Use of force to repel this ship is controversial to some Japanese (Dutch scholars, etc) and
+    critique some Bakufu policy
+
+### 2. Dangers from Abroad: British Imperialist Expansion in Asia
+
+- Remember, British were rapidly expanding in Asia at this time, and the Japanese were aware of this
+  - Lead to sending large swathes of British silver being sent to China to pay for tea
+  - So British solved this problem by paying for exports with opium
+  - Chinese (Qing dynasty) eventually ban opium, slowly getting more serious and declare a war of
+    drugs
+  - In response, British declare war on China and send their Navy (Opium War)
+  - Opium War establishes the basic model of how Western powers will interact with Asian countries
+    (including Japan)
+  - At the heart of the model, is the idea of the "Treaty Port System"
+    - Treaty of Nanking (1842) is the first of these treaties
+    - Chinese cede Hong Kong to British, open up 5 ports to British trade, Extraterritoriality
+      (legal principle that foreigners are not subject to local laws, i.e. any British citizen that
+      commited a crime in China would not be handed over to Chinese authorities, but would be tried by
+      British authorities, often British merchants), and also a fixed, artifically low, tariff rate
+- As soon as it is completed, other western countries show up and demand similar treaties
+  - Serves as basis for Japanese treaties later
+- News does not take long to reach the Bakufu
+  - Happening at the same time as the Tenpo Reforms (domestic reforms)
+
+### 3. Japan and the West, 1842-1854
+
+- In 1842, expulsion decree is formally recinded
+- In 1844, Wilhelm II, the Dutch king, warns the Bakufu that the British were coming in search of
+  trade, and if Japan did not open up, they would be forced to
+  - Suggested that the Japanese look to the Dutch for assistance (wanted to negotiate a new treaty)
+  - At this point, also a power struggle within the Bakufu, when Abe Masahiro (1845-) becomes the
+    head of the Bakufu beauracracy
+  - Abe does not take up the Dutch on the offer
+- But in the next few years, two Western countries show up
+  - Jean-Baptiste Cecille (France) and James Biddle (US)
+  - Both try to negiotiate treaties for trade, but are rebuffed
+  - Biddle brings two large gunships, but both the French and Americans make no trouble (for now)
+- But in Washington DC, politicians were growing increasingly unhappy with Japan
+  - Note the Gold rush (1849), the Mexican American war (1846-1848) and how California became part
+    of the US, and the British selling the US Oregon
+  - Burgeoning population on the West Coast, leading to talk of a trans-continental railroad, so why
+    not go all the way to Asia?
+- Moby Dick (starts in New Bedford). New Bedford/Nantucket is the whaling capital of the US/world.
+- In 1848, 15 American whalers from the Lagoda, get shipwrecked in Ezo, and are then taken to
+  Nagasaki, who send word to the Americans
+  - Leads to another Naval commander, named James Glenn, to go to rescue them
+  - Forces the Japanese to finally turn over the Americans, and when they are brought back, the
+    newspapers recount all of the barbarities that they suffered at the hands of the Japanese
+  - President Filmore chooses Matthew Perry (Naval Commander) to go to Japan to renegotiate the
+    american relationship with Japan
+  - Told to use restraint, but journey helps him realize the important of the culling stations
+    independent of the British
+  - Uses Samuel Wells Williams as an interpreter
+  - Perry ends up sailing his ships right into Edo Bay, and threatens the Japanese, leaving Abe
+    Masahiro with a dilemna
+    - If he rejects the American proposal, Japan might be forced into war
+    - But if he accepts those demands, he opens up the Bakufu to serious criticize
+    - Abe decides to do something unprecendented: asks all the Daimyo for their opinion
+      - signifies beginning of the end of Bakufu's exclusive authority
+      - no agreement on the right course of action
+- Perry returns in 1854, and by end of March, a treaty had been signed
+
+## Key Terms
+
+- Samuel Wells Williams (1812-1884)
+- The Morrison Incident (1837)
+- First Opium War
+- Treaty of Nanking (1842)
+- Treaty Port System
+- Extraterritoriality
+- Mizuno Tadakuni (1794-1851)
+- Abe Masahiro (1819-1857)
+- James Biddle (1783-1848)
+- Jean-Baptiste Cecille (1787-1873)
+- Herman Melville, _Moby Dick_ (1851)
+- James Glynn (1800-1871)
+- Matthew Calbraith Perry (1794-1858)
